--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
   "name": "angular-json-class-converter",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Angular module to serialize and deserialize JS/TS objects to JSON. ",
+  "keywords" :["Angular","Library","JSON","serialize","deserialize","GSON","class"],
+  "license" : "SEE LICENSE IN LICENSE",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/doron-mil/angular-json-class-converter"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build_lib": "ng build angular-json-class-converter",
+    "copy-license": "cp ./LICENSE ./dist/angular-json-class-converter",
+    "copy-readme": "cp ./README.md ./dist/angular-json-class-converter",
+    "copy-files": "npm run copy-license && npm run copy-readme",
+    "npm_pack": "cd dist/angular-json-class-converter && npm pack",
+    "package": "npm run build_lib && npm run copy-files && npm run npm_pack"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +38,8 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-ng-packagr": "~0.13.0",
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
@@ -39,8 +54,11 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.2.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "tsickle": ">=0.34.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
   }
