--- a/projects/angular-json-class-converter/package.json
+++ b/projects/angular-json-class-converter/package.json
@@ -1,14 +1,24 @@
 {
   "name": "angular-json-class-converter",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Angular module to serialize and deserialize JS/TS objects to JSON. ",
-  "keywords" :["Angular","Library","JSON","serialize","deserialize","GSON","class"],
-  "license" : "SEE LICENSE IN LICENSE",
+  "author": "Eldar-Doron Miller",
+  "license": "SEE LICENSE IN LICENSE",
+  "keywords": [
+    "Angular",
+    "Library",
+    "JSON",
+    "serialize",
+    "deserialize",
+    "GSON",
+    "class"
+  ],
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/doron-mil/angular-json-class-converter"
+    "type": "git",
+    "url": "https://github.com/doron-mil/angular-json-class-converter"
   },
   "peerDependencies": {
-    "@angular/core": "^7.2.0"
+    "@angular/core": "^7.2.0",
+    "json-class-converter": "^1.0.1"
   }
 }
