master - fixing production forRoot undefined and adding support for testing production with express server

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-json-class-converter",
-  "version": "2.1.0",
+  "version": "3.0.1",
   "description": "Angular module to serialize and deserialize JS/TS objects to JSON. ",
   "keywords": [
     "Angular",
@@ -20,7 +20,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-test": "ng build testApp --prod --outputPath='dist_test'",
     "test": "ng test",
+    "run server": "node ./testApp/testServer/server.js",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build_lib": "ng build angular-json-class-converter",
@@ -53,10 +55,11 @@
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "express": "^4.17.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
